@@ -6,12 +6,16 @@ import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonPropertyOrder;
 import de.fraunhofer.iao.querimonia.nlp.classifier.ClassifierDefinition;
 import de.fraunhofer.iao.querimonia.nlp.classifier.ClassifierType;
+import de.fraunhofer.iao.querimonia.nlp.emotion.EmotionAnalyzerDefinition;
+import de.fraunhofer.iao.querimonia.nlp.emotion.EmotionAnalyzerType;
 import de.fraunhofer.iao.querimonia.nlp.extractor.ExtractorDefinition;
 import de.fraunhofer.iao.querimonia.nlp.sentiment.SentimentAnalyzerDefinition;
 import de.fraunhofer.iao.querimonia.nlp.sentiment.SentimentAnalyzerType;
 import org.apache.commons.lang3.builder.EqualsBuilder;
 import org.apache.commons.lang3.builder.HashCodeBuilder;
 import org.apache.commons.lang3.builder.ToStringBuilder;
+import org.springframework.lang.NonNull;
+import tec.uom.lib.common.function.Identifiable;
 
 import javax.persistence.CascadeType;
 import javax.persistence.Column;
@@ -19,8 +23,10 @@ import javax.persistence.Entity;
 import javax.persistence.GeneratedValue;
 import javax.persistence.GenerationType;
 import javax.persistence.Id;
+import javax.persistence.JoinColumn;
 import javax.persistence.OneToMany;
 import javax.persistence.Transient;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
@@ -28,6 +34,7 @@ import java.util.List;
  * A configuration defines which tools are used by querimonia to analyze complaint texts. This
  * consists of entity extractors, classifiers and sentiment analyzers (but not response
  * generators).
+ * <p>Instanced can be created using a {@link ConfigurationBuilder}</p>
  */
 @Entity
 @JsonPropertyOrder(value = {
@@ -35,9 +42,10 @@ import java.util.List;
     "name",
     "extractors",
     "classifiers",
-    "sentimentAnalyzer"
+    "sentimentAnalyzer",
+    "emotionAnalyzer"
 })
-public class Configuration {
+public class Configuration implements Identifiable<Long> {
 
   /**
    * This configuration is used as fallback, when the database does not contain any configurations.
@@ -45,98 +53,194 @@ public class Configuration {
    */
   @Transient
   @JsonIgnore
-  public static final Configuration FALLBACK_CONFIGURATION = new Configuration()
+  public static final Configuration FALLBACK_CONFIGURATION = new ConfigurationBuilder()
       .setName("Default")
-      .setExtractors(Collections.emptyList())
-      .setClassifiers(List.of(
-          new ClassifierDefinition(ClassifierType.NONE, "Default", "Kategorie")))
-      .setSentimentAnalyzer(new SentimentAnalyzerDefinition(SentimentAnalyzerType.NONE, "Default"));
+      .setExtractors(new ArrayList<>())
+      .setClassifiers(new ArrayList<>(List.of(
+          new ClassifierDefinition(ClassifierType.NONE, "Default", "Kategorie"))))
+      .setSentimentAnalyzer(new SentimentAnalyzerDefinition(SentimentAnalyzerType.NONE, "Default"))
+      .setEmotionAnalyzer(new EmotionAnalyzerDefinition(EmotionAnalyzerType.NONE, "Default"))
+      .setActive(false)
+      .createConfiguration();
 
   @Id
   @GeneratedValue(strategy = GenerationType.SEQUENCE)
   @JsonProperty("id")
   private long configId;
 
-  @Column(name = "config_name")
-  private String name;
+  @Column(name = "config_name", nullable = false)
+  @NonNull
+  private String name = "";
 
   @OneToMany(cascade = CascadeType.ALL)
-  private List<ExtractorDefinition> extractors;
+  @JoinColumn(name = "config_id")
+  @NonNull
+  private List<ExtractorDefinition> extractors = new ArrayList<>();
 
   @OneToMany(cascade = CascadeType.ALL)
-  private List<ClassifierDefinition> classifiers;
+  @JoinColumn(name = "config_id")
+  @NonNull
+  private List<ClassifierDefinition> classifiers = new ArrayList<>();
 
-  private SentimentAnalyzerDefinition sentimentAnalyzer;
+  @NonNull
+  private SentimentAnalyzerDefinition sentimentAnalyzer = new SentimentAnalyzerDefinition();
+
+  @NonNull
+  private EmotionAnalyzerDefinition emotionAnalyzer = new EmotionAnalyzerDefinition();
+
+  private boolean active = false;
 
   /**
-   * Creates a new configuration object.
-   *
-   * @param name              a identifier for the configuration.
-   * @param extractors        the list of extractors.
-   * @param classifiers       the classifiers of this configuration.
-   * @param sentimentAnalyzer the sentiment analyzer.
+   * Json constructor.
    */
   @JsonCreator
-  public Configuration(String name,
-                       List<ExtractorDefinition> extractors,
-                       List<ClassifierDefinition> classifiers,
-                       SentimentAnalyzerDefinition sentimentAnalyzer) {
+  @SuppressWarnings("unused")
+  Configuration(
+      @JsonProperty("id") long id,
+      @JsonProperty("name") @NonNull String name,
+      @JsonProperty("extractors") @NonNull List<ExtractorDefinition> extractors,
+      @JsonProperty("classifiers") @NonNull List<ClassifierDefinition> classifiers,
+      @JsonProperty("sentimentAnalyzer") @NonNull SentimentAnalyzerDefinition sentimentAnalyzer,
+      @JsonProperty("emotionAnalyzer") @NonNull EmotionAnalyzerDefinition emotionAnalyzer) {
+    this.configId = id;
     this.name = name;
     this.extractors = extractors;
     this.classifiers = classifiers;
     this.sentimentAnalyzer = sentimentAnalyzer;
+    this.emotionAnalyzer = emotionAnalyzer;
+    this.active = false;
   }
 
+  /**
+   * Constructor for builder.
+   */
+  Configuration(long id,
+                @NonNull String name,
+                @NonNull List<ExtractorDefinition> extractors,
+                @NonNull List<ClassifierDefinition> classifiers,
+                @NonNull SentimentAnalyzerDefinition sentimentAnalyzer,
+                @NonNull EmotionAnalyzerDefinition emotionAnalyzer,
+                boolean active) {
+    this.configId = id;
+    this.name = name;
+    this.extractors = extractors;
+    this.classifiers = classifiers;
+    this.sentimentAnalyzer = sentimentAnalyzer;
+    this.emotionAnalyzer = emotionAnalyzer;
+    this.active = active;
+  }
+
+  @SuppressWarnings("unused")
   private Configuration() {
     // for hibernate
   }
 
-  public long getConfigId() {
+  /**
+   * Returns the unique id of the configuration.
+   *
+   * @return the unique id of the configuration.
+   */
+  @Override
+  @JsonProperty("id")
+  public Long getId() {
     return configId;
   }
 
-  public Configuration setConfigId(long configId) {
-    this.configId = configId;
-    return this;
+  /**
+   * Returns a copy of this configuration with the id set to the given id.
+   *
+   * @param configId the id that the configuration should have.
+   *
+   * @return a copy of this configuration with the id set to the given id.
+   */
+  public Configuration withConfigId(long configId) {
+    return new ConfigurationBuilder(this)
+        .setId(configId)
+        .createConfiguration();
   }
 
+  /**
+   * Returns the name of the configuration. The name is an attribute that is chosen by the user
+   * to identify configurations.
+   *
+   * @return the name of the configuration.
+   */
+  @NonNull
   public String getName() {
     return name;
   }
 
-  public Configuration setName(String name) {
-    this.name = name;
-    return this;
-  }
-
+  /**
+   * Returns the list of {@link ExtractorDefinition extractors} that are used in this
+   * configuration. All extractors that are defined in this list will be used in the analysis
+   * when this configuration is selected.
+   *
+   * @return the list of {@link ExtractorDefinition extractors} that are used in this configuration.
+   */
+  @NonNull
   public List<ExtractorDefinition> getExtractors() {
     return extractors;
   }
 
-  private Configuration setExtractors(
-      List<ExtractorDefinition> extractors) {
-    this.extractors = extractors;
-    return this;
-  }
-
+  /**
+   * Returns the list of {@link ClassifierDefinition classifiers} that are used in this
+   * configuration. All classifiers. that are defined in this list will be used in the analysis
+   * when this configuration is selected.
+   *
+   * @return the list of {@link ClassifierDefinition classifiers} that are used in this
+   * configuration.
+   */
+  @NonNull
   public List<ClassifierDefinition> getClassifiers() {
     return classifiers;
   }
 
-  private Configuration setClassifiers(
-      List<ClassifierDefinition> classifiers) {
-    this.classifiers = classifiers;
-    return this;
-  }
-
+  /**
+   * Returns the {@link SentimentAnalyzerDefinition sentiment analyzer} that is defined in this
+   * configuration.
+   *
+   * @return the {@link SentimentAnalyzerDefinition sentiment analyzer} that is defined in this
+   * configuration.
+   */
+  @NonNull
   public SentimentAnalyzerDefinition getSentimentAnalyzer() {
     return sentimentAnalyzer;
   }
 
-  private Configuration setSentimentAnalyzer(
-      SentimentAnalyzerDefinition sentimentAnalyzer) {
-    this.sentimentAnalyzer = sentimentAnalyzer;
-    return this;
+  /**
+   * Returns the {@link EmotionAnalyzerDefinition emotion analyzer} that is defined in this
+   * configuration.
+   *
+   * @return the {@link EmotionAnalyzerDefinition emotion analyzer} that is defined in this
+   * configuration.
+   */
+  @NonNull
+  public EmotionAnalyzerDefinition getEmotionAnalyzer() {
+    return emotionAnalyzer;
+  }
+
+  /**
+   * Returns true, if this is the currently active configuration. There should always be only one
+   * active configuration. The active configuration is used in the analysis process by default.
+   *
+   * @return true, if this is the currently active configuration, else false.
+   */
+  public boolean isActive() {
+    return active;
+  }
+
+  /**
+   * Returns a copy of this configuration with the given active state. There should always be
+   * only one active configuration.
+   *
+   * @param active if the copy should be the active configuration or not.
+   *
+   * @return a copy of this configuration with the given active state.
+   */
+  public Configuration withActive(boolean active) {
+    return new ConfigurationBuilder(this)
+        .setActive(active)
+        .createConfiguration();
   }
 
   @Override
@@ -156,6 +260,7 @@ public class Configuration {
         .append(extractors, that.extractors)
         .append(classifiers, that.classifiers)
         .append(sentimentAnalyzer, that.sentimentAnalyzer)
+        .append(emotionAnalyzer, that.emotionAnalyzer)
         .isEquals();
   }
 
@@ -166,6 +271,7 @@ public class Configuration {
         .append(extractors)
         .append(classifiers)
         .append(sentimentAnalyzer)
+        .append(emotionAnalyzer)
         .toHashCode();
   }
 
@@ -175,8 +281,9 @@ public class Configuration {
         .append("configId", configId)
         .append("name", name)
         .append("extractors", extractors)
-        .append("classifier", classifiers)
+        .append("classifiers", classifiers)
         .append("sentimentAnalyzer", sentimentAnalyzer)
+        .append("emotionAnalyzer", emotionAnalyzer)
         .toString();
   }
 }
